Scroll overflow color fix

--- a/app/styles/application.css
+++ b/app/styles/application.css
@@ -12,6 +12,10 @@ html, body {
   padding: 0;
 }
 
+html {
+  background: var(--blue800);
+}
+
 body {
   display: flex;
   flex-direction: column;
